# sugar_drm

./: Makefile.am  Makefile.sources  configure.ac  configure.sh  libdrm2.pc  libdrm2.pc.in  libdrm_macros.h  xf86drm.c  xf86drm2.h  xf86drm2Mode.h  xf86drmHash.c  xf86drmMode.c  xf86drmRandom.c  xf86drmSL.c
amdgpu/: amdgpu_bo.c  amdgpu_cs.c  amdgpu_device.c  amdgpu_gpu_info.c
exynos/: exynos_drm.c  exynos_drmif.h  exynos_fimg2d.c
freedreno/: freedreno_drmif.h  freedreno_priv.h
include/drm2/: drm.h  drm_fourcc.h  drm_mode.h  my_prints.h  radeon_drm.h  vmwgfx_drm.h
intel/: Makefile.am  intel_bufmgr.c  intel_bufmgr_fake.c  intel_bufmgr_gem.c  intel_decode.c  libdrm2_intel.pc  libdrm2_intel.pc.in  mm.c  test_decode.c
libkms/: Makefile.am  dumb.c  exynos.c  intel.c  libkms2.pc  libkms2.pc.in  linux.c  nouveau.c  radeon.c  vmwgfx.c
man/: drm-kms.xml  drm-memory.xml  drm.xml  drmAvailable.xml  drmHandleEvent.xml  drmModeGetResources.xml
nouveau/: nouveau.c  private.h  pushbuf.c
omap/: omap_drm.c  omap_drmif.h
radeon/: radeon_bo_gem.c  radeon_cs_gem.c  radeon_surface.c
tegra/: tegra.c
tests/: dristat.c  drmdevice.c  drmsl.c  drmstat.c  drmtest.h  hash.c  random.c
tests/amdgpu/: amdgpu_test.c
tests/exynos/: exynos_fimg2d_event.c  exynos_fimg2d_perf.c  exynos_fimg2d_test.c
tests/kms/: Makefile.am  kms-universal-planes.c  libkms-test-framebuffer.c  libkms-test.h
tests/kmstest/: Makefile.am  main.c
tests/modeprint/: modeprint.c
tests/modetest/: buffers.c  cursor.c  modetest.c
tests/nouveau/: threaded.c
tests/proptest/: proptest.c
tests/radeon/: radeon_ttm.c  rbo.c
tests/tegra/: openclose.c
tests/ttmtest/: configure.ac
tests/ttmtest/src/: ttmtest.c
tests/util/: kms.c
tests/vbltest/: vbltest.c
